[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/Mapa1-chrts.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://scripts/Camera.gd" type="Script" id=4]
[ext_resource path="res://scenes/Barra.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/music/Spaceship.wav" type="AudioStream" id=6]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 1.0

[sub_resource type="CircleShape2D" id=2]
radius = 14.2099

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 268.477, 85.0844 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16.3513, 78.2715 )

[node name="Main" type="Node2D"]
position = Vector2( 4.5199, 7.58689 )
script = ExtResource( 2 )

[node name="Viewports" type="HBoxContainer" parent="."]
margin_right = 1275.0
margin_bottom = 716.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer1" type="ViewportContainer" parent="Viewports"]
margin_right = 635.0
margin_bottom = 716.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport1" type="Viewport" parent="Viewports/ViewportContainer1"]
size = Vector2( 635, 716 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="Viewports/ViewportContainer1/Viewport1"]
current = true
zoom = Vector2( 1.8, 1.8 )
script = ExtResource( 4 )

[node name="Mapa1-chrts" parent="Viewports/ViewportContainer1/Viewport1" instance=ExtResource( 1 )]

[node name="ViewportContainer2" type="ViewportContainer" parent="Viewports"]
margin_left = 639.0
margin_right = 1275.0
margin_bottom = 716.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport2" type="Viewport" parent="Viewports/ViewportContainer2"]
size = Vector2( 636, 716 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="Viewports/ViewportContainer2/Viewport2"]
current = true
zoom = Vector2( 1.8, 1.8 )
script = ExtResource( 4 )

[node name="RigidBody2D" type="RigidBody2D" parent="."]
visible = false
position = Vector2( 451.368, 343.928 )
physics_material_override = SubResource( 1 )
gravity_scale = 4.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="RigidBody2D"]
position = Vector2( -0.969727, -1.3871 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2( -0.610962, -0.91655 )
scale = Vector2( 2, 2 )
shape = SubResource( 2 )
one_way_collision_margin = 0.0

[node name="StaticBody2D" type="StaticBody2D" parent="." groups=["wall"]]
collision_layer = 65

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1330.26, -259.775 )
shape = SubResource( 3 )

[node name="StaticBody2D2" type="StaticBody2D" parent="." groups=["wall"]]
collision_layer = 65

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 2090.56, -174.864 )
shape = SubResource( 4 )

[node name="Barra" parent="." instance=ExtResource( 5 )]
margin_left = 620.0
margin_right = 620.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -15.0
autoplay = true
